Fix text overflow in hourglass chart

--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -1847,7 +1847,7 @@ html[dir='rtl'] .flyout2 {text-align:right; right:40px;}
 .desc_tree_div {display:none;}
 .desc_tree_div ul {padding:0; margin-left:10px;margin-top:0; margin-right:0;}
 .sb_desc_indi_li {list-style-type:none; white-space:nowrap;}
-div .noprint{max-height: 0px; width: 0;}
+.blockcontent .noprint{max-height: 0px; width: 0;}
 
 html[dir='rtl'] #sb_desc_content {margin-right:3px;}
 html[dir='rtl'] .desc_tree_div ul {margin-right:10px; margin-left:0;}
