--- a/themes/fab/style.css
+++ b/themes/fab/style.css
@@ -1338,7 +1338,7 @@ html[dir='rtl'] .flyout3 {text-align:right;}
 .sb_desc_indi_li {list-style-type:none;}
 .desc_tree_div {display:none;}
 .desc_tree_div ul {padding:0; margin-left:10px; margin-top:0; margin-right:0;}
-div .noprint{max-height: 0px; width: 0;}
+.blockcontent .noprint{max-height: 0px; width: 0;}
 
 html[dir='rtl'] #sb_desc_content {margin-right:3px;}
 html[dir='rtl'] .desc_tree_div ul {margin-right:10px; margin-left:0;}
